--- a/Ansible Playbooks/Git_Treeinstall.yaml
+++ b/Ansible Playbooks/Git_Treeinstall.yaml
@@ -4,3 +4,11 @@
   tasks:
   - name: check ping install git and update packages
     ping:
+    apt:
+      - name: git
+        state: present
+        update_cache: yes
+  - name: install tree packages
+    apt:
+      - name: tree
+        state: present
