--- a/Ansible Playbooks/Betterlamp.yml
+++ b/Ansible Playbooks/Betterlamp.yml
@@ -11,7 +11,7 @@
     - Restart apache2
   - name: Installing php
     apt:
-      name: {{ 'items' }}
+      name: {{ item }}
       state: present
     with_items:
       - php
