--- a/Ansible Playbooks/Betterlamp.yml
+++ b/Ansible Playbooks/Betterlamp.yml
@@ -13,7 +13,7 @@
 
   - name: Installing php
     apt:
-      name: {{ item }}
+      name: "{{ item }}"
       state: present
     with_items:
       - php
