--- a/Ansible Playbooks/betterlamp_vars.yaml
+++ b/Ansible Playbooks/betterlamp_vars.yaml
@@ -2,16 +2,13 @@
 - hosts: all
   become: yes
   vars:
-    pack_name: apache
+    pack_name: 
+    - apache
+    - httpd
     php_packages:
     - php
     - libapache2-mod-php
     - php-mysql
-  when: ansible_os_family == "Debian"
-    pack_name: httpd
-    php_packages:
-    - php
-  when: ansible_os_family == "RedHat"    
   tasks:
   - name: Installation of Apache
     package:
