--- a/Ansible Playbooks/testingtemplates.yml
+++ b/Ansible Playbooks/testingtemplates.yml
@@ -9,6 +9,6 @@
       src: hello.txt
       dest: /home/ansible/hello
   - name: create a file with dynamic content
-    templates:
+    template:
       src: message.j2
       dest: /home/ansible/message
