update debug file

--- a/Ansible Playbooks/debug.yml
+++ b/Ansible Playbooks/debug.yml
@@ -3,7 +3,7 @@
   become: yes
   tasks:
   - name: display of the files
-    - shell: ls
-      register: dir_files
-    - debug:
-        var: dir_files.stdout_lines
+    command: ls
+    register: dir_files
+  debug:
+    var: dir_files.stdout_lines
