update debug file

--- a/Ansible Playbooks/debug.yml
+++ b/Ansible Playbooks/debug.yml
@@ -5,5 +5,6 @@
   - name: display of the files
     command: ls
     register: dir_files
-  debug:
-    var: dir_files.stdout_lines
+  - name: display lines
+    debug:
+      var: dir_files
