new file added display

--- a/Ansible Playbooks/display.yml
+++ b/Ansible Playbooks/display.yml
@@ -4,4 +4,4 @@
   tasks:
   - name: Display Ip and hostname of machines
     debug:
-      msg: hostname is {{ansible_nodename}}
+      msg: hostname is {{ansible_nodename}} and IP is {{ansible_all_ipv4_addresses}}
