--- a/Ansible Playbooks/display.yml
+++ b/Ansible Playbooks/display.yml
@@ -5,4 +5,5 @@
   - name: Display Ip and hostname of machines
     debug:
       msg: hostname is {{ansible_nodename}} and IP is {{ansible_all_ipv4_addresses}}
+    debug:
       msg: Details of IPv4 is {{ansible_default_ipv4}}
