--- a/Ansible Playbooks/display.yml
+++ b/Ansible Playbooks/display.yml
@@ -4,6 +4,5 @@
   tasks:
   - name: Display Ip and hostname of machines
     debug:
-      msg: hostname is {{ansible_nodename}} and IP is {{ansible_all_ipv4_addresses}}
-    debug:
-      msg: Details of IPv4 is {{ansible_default_ipv4}}
+      msg: hostname is {{ansible_nodename}} and IP is {{ansible_all_ipv4_addresses}} and also {{ansible_default_ipv4}}
+      
