--- a/Ansible Playbooks/debug_1.yml
+++ b/Ansible Playbooks/debug_1.yml
@@ -4,4 +4,4 @@
   tasks:
   - name: Display Ip and hostname of machines
     debug:
-      msg: Date and time is "{{ansible_date_time}}"
+      msg: Date and time is "{{ansible_date_time[0]}}"
